refactoring: remove unnecessary assertions and streamline variable handling